# ahpip

./: .gitignore  README.md  ahp_calculator.spec  main.spec  pyproject.toml  requirements.txt
data/: criterias.json  example_preentered.json  iot.json  objects.json
src/: __init__.py  app.py  main.py
src/pages/: calculator.py  constants.py  data.py  drawer.py  input.py  instruction.py  materials.py  navigation.py  shared.py
src/utils/: calc.py  calculator.py  constants.py  dynamic_models.py  shishkin.py  vizualization.py
