[project]
name = "ahpip"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "ahpy>=2.0",
    "matplotlib>=3.8.4",
    "pip>=24.0",
    "fastapi>=0.110.1",
    "fastui>=0.5.2",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
app = "src.main:main"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
